--- a/.env-example
+++ b/.env-example
@@ -7,12 +7,8 @@
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL='postgres://postgres:postgrespw@localhost:55000/system?schema=public'
 
 # Next Auth
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
