--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.10",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.1",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-select": "^1.1.1",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-rc.0",
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
+    "@types/lodash": "^4.14.188",
     "@types/react-input-mask": "^3.0.1",
     "argon2": "^0.30.1",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "next": "13.0.0",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
