--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.10.12",
-    "@mui/x-data-grid": "^5.17.10",
+    "@aws-sdk/client-s3": "^3.218.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-select": "^1.1.1",
@@ -36,8 +33,10 @@
     "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-input-mask": "^2.0.4",
+    "react-spring": "^9.5.5",
     "sass": "^1.55.0",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
@@ -48,6 +47,7 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.22.0",
     "eslint-config-next": "13.0.0",
     "prisma": "^4.5.0",
