--- a/.env-example
+++ b/.env-example
@@ -12,3 +12,11 @@ DATABASE_URL='postgres://postgres:postgrespw@localhost:55000/system?schema=publi
 # Next Auth
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
+
+S3_ENDPOINT='http://localhost:9090'
+S3_ACCESS_KEY='db597474f97c434a8382fdf09cd889c6'
+S3_SECRET_KEY='11a8af8e70c2b6d64ea2ae2f69a8279b'
+S3_BUCKET_NAME='test'
+
+NEXT_PUBLIC_S3_ENDPOINT='http://localhost:9090'
+NEXT_PUBLIC_S3_BUCKET_NAME='test'
